Items added, spacing fixed

--- a/src/scss/archive.scss
+++ b/src/scss/archive.scss
@@ -3,7 +3,7 @@
 }
 
 .item {
-  margin-top: 30px;
+  margin-top: 35px;
 }
 
 .item__address {
@@ -19,6 +19,6 @@
 }
 
 .item__description {
-  margin-top: 20px;
+  margin-top: 10px;
   color: #333;
 }
